[package]
name = "probminhash"
version = "0.1.0"
authors = ["jeanpierre.both@gmail.com"]
repository = "https://github.com/jean-pierreBoth/probminhash"
documentation = "https://docs.rs/probminhash"
keywords = ["minhash", "lsh", "jaccard"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Minhash algorithms for weighted Jaccard index"

[features]

# declare a feature with no dependancy to get some modulated debug print
# to be run with cargo build --features verbose_1
#verbose_1 = [ ]


[lib]

lib = "probminhash"
path = "src/lib.rs"
test=true

doc=true

[dependencies]
# default is version spec is ^ meaning can update up to max non null version number
# cargo doc --no-deps avoid dependencies doc generation
#

time = {version = "0.2"}

#  for hashing 
rand = {version = "0.7"}
rand_distr = {version = "0.3"}
rand_xorshift = {version = "0.2"}
rand_xoshiro = {version = "0.4"}

fxhash = { version= "0.2"}
indexmap = { version = "1.6"}
fnv = {version= "1.0"}

lazy_static = { version = "1.4"}

# decreasing order of log for debug build : (max_level_)trace debug info warn error off
# decreasing order of log for release build (release_max_level_)  .. idem
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
env_logger = { version = "0.7"}
