[package]
name = "probminhash"
version = "0.1.8"
authors = ["jeanpierre.both@gmail.com"]
repository = "https://github.com/jean-pierreBoth/probminhash"
documentation = "https://docs.rs/probminhash"
keywords = ["minhash", "lsh", "jaccard"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Minhash algorithms for weighted Jaccard index"



[lib]

lib = "probminhash"
path = "src/lib.rs"
test=true

doc=true

[dependencies]
# default is version spec is ^ meaning can update up to max non null version number
# cargo doc --no-deps avoid dependencies doc generation
#

num = {version = "0.4"}

#  for hashing 
rand = {version = "0.8"}
rand_distr = {version = "0.4"}
rand_xorshift = {version = "0.3"}
rand_xoshiro = {version = "0.6"}
sha2 = {version = "0.10"}
wyhash = {version = "0.5"}
twox-hash = {version = "1.6"}

fxhash = { version= "0.2"}
indexmap = { version = "1.9"}
fnv = {version= "1.0"}

lazy_static = { version = "1.4"}

# serialization of setsketch params
serde= {version = "1.0", features = ["derive"] }
serde_json= {version = "1.0"}

# for doc
katexit = {version = "0.1"}


# decreasing order of log for debug build : (max_level_)trace debug info warn error off
# decreasing order of log for release build (release_max_level_)  .. idem
#log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
log = { version = "0.4"}
env_logger = { version = "0.9"}


[features]

default = []

# to enable the interger version of superminhash
sminhash2 = []