[package]
name = "probminhash"
version = "0.1.12"
authors = ["jeanpierre.both@gmail.com"]
repository = "https://github.com/jean-pierreBoth/probminhash"
documentation = "https://docs.rs/probminhash"
keywords = ["minhash", "lsh", "jaccard", "probminhash", "hyperloglog"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Minhash algorithms for weighted Jaccard index"


[lib]

lib = "probminhash"
path = "src/lib.rs"
test = true

doc = true

[dependencies]
# default is version spec is ^ meaning can update up to max non null version number
# cargo doc --no-deps avoid dependencies doc generation
#

num = { version = "0.4" }

#  for hashing 
rand = { version = "0.9" }
rand_distr = { version = "0.5" }
rand_xorshift = { version = "0.4" }
rand_xoshiro = { version = "0.7" }
rand_chacha = { version = "0.9"}
twox-hash = { version = "2.1" }
sha2 = { version = "0.10" }
murmur3 = { version = "0.5" }
wyhash = { version = "0.5" }
fxhash = { version = "0.2" }
indexmap = { version = "2.5" }
fnv = { version = "1.0" }

lazy_static = { version = "1.5" }

# serialization of setsketch params
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

rayon = { version = "1.10" }
argmin = { version = "0.10" }
argmin-observer-slog = { version = "0.1.0"}

anyhow = { version = "1.0" }
# for doc
katexit = { version = "0.1" }


# decreasing order of log for debug build : (max_level_)trace debug info warn error off
# decreasing order of log for release build (release_max_level_)  .. idem
#log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
log = { version = "0.4" }
env_logger = { version = "0.11" }


[features]

default = ["sminhash2"]

# to enable the interger version of superminhash
sminhash2 = []
